# micro-url

./: Cargo.toml  LICENSE.txt  README.md
migrations/2024-03-26-211153_create_links/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs
