[package]
name = "micro-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
